--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,8 +21,9 @@
   </head>
   <body>
     <header class="page-header">
-      <nav>
-        <a class="header-logo" href="./index.html"
+      <div class="container header-container">
+      <nav class="header-nav">
+        <a class="logo header-logo" href="./index.html"
           >Web<span class="logo-text">Studio</span></a
         >
         <ul class="header-menu-list">
@@ -44,6 +52,7 @@
           </li>
         </ul>
       </address>
+      </div>
     </header>
 
     <main>
